force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__EngagementChannelActionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelActionId__c</fullName>
    <label>Engagement Channel Action</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelActionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>