force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__PrimaryCouponName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryCouponName__c</fullName>
    <label>Primary Coupon Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryCouponName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>