force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__ProductCategory5Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductCategory5Name__c</fullName>
    <label>Product Category 5</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductCategory5Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>