force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__ProductId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductId__c</fullName>
    <label>Product Identifier</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>