force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__rel_1732260236670_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260236670_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistItemEngagement_Engag_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistItemEngagement_Engag_rel</relationshipLabel>
    <relationshipName>rel_1732260236670_end</relationshipName>
    <type>Lookup</type>
</CustomField>