force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__rel_1732260254316_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260254316_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistItemEngagement_UtmId_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistItemEngagement_UtmId_rel</relationshipLabel>
    <relationshipName>rel_1732260254316_end</relationshipName>
    <type>Lookup</type>
</CustomField>