force-app/main/default/objects/ssot__ShoppingWishlistItemEngagement__dlm/fields/ssot__rel_1732261008339_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732261008339_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingWishlistItemEngagement_Perso_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>ShoppingWishlistItemEngagement_Perso_rel</relationshipLabel>
    <relationshipName>rel_1732261008339_end</relationshipName>
    <type>Lookup</type>
</CustomField>